[package]
name = "tacit-py"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey McAteer <jeffrey@jmcateer.com>"]


[dependencies]


[dependencies.pyo3]
version = "0.20"
features = ["abi3", "abi3-py310"]


[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
#opt-level = "s"
opt-level = 3
lto = true


