[package]
name = "tacit-py"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey McAteer <jeffrey@jmcateer.com>"]


[dependencies]
include_dir = "0.7"
# egui = "0.26"
eframe = "0.26"
egui_extras = "0.26"


[dependencies.pyo3]
version = "0.20"
#features = ["abi3", "abi3-py310"]
features = ["abi3"]



[target.x86_64-pc-windows-gnu.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[target.x86_64-pc-windows-msvc.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}


[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
#opt-level = "s"
opt-level = 3
lto = true


